<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="26dp"
    android:paddingBottom="15dp"
    android:background="@color/black_light"
    tools:context=".ui.filterfragment.FilterFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_filter"
        android:textAlignment="center"
        android:textSize="18sp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:paddingVertical="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/chip_group_status"
            app:layout_constraintTop_toBottomOf="@id/filter"
            />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_status"
        app:layout_constraintBottom_toTopOf="@id/text_gender"
        app:singleSelection="true">


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alive"
            style="@style/ChipStyle"
            android:text="@string/alive" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dead"
            style="@style/ChipStyle"
            android:text="@string/dead" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_unknown"
            style="@style/ChipStyle"
            android:text="@string/unknown" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
            android:id="@+id/text_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_gender"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingVertical="16dp"
            app:layout_constraintStart_toStartOf="@id/chip_group_status"
        app:layout_constraintBottom_toTopOf="@id/radio_group_gender"
            app:layout_constraintTop_toBottomOf="@id/chip_group_status"/>


    <TextView
        android:id="@+id/clear_radioCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_clear"
        android:textColor="@color/text_blue_color"
        android:textStyle="bold"
        android:paddingVertical="16dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/radio_group_gender"
        app:layout_constraintTop_toTopOf="@id/text_gender"
        app:layout_constraintBottom_toBottomOf="@+id/text_gender"
        />

            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_gender"
                >

                <RadioButton
                    android:id="@+id/female"
                    style="@style/RadioButtonStyle"
                    android:text="@string/txt_checkbox_female"
                    android:textColor="@android:color/transparent"
                    android:background="@drawable/radiobutton_female_selector"
                    />

                <RadioButton
                    android:id="@+id/male"
                    style="@style/RadioButtonStyle"
                    android:text="@string/txt_checkbox_male"
                    android:textColor="@android:color/transparent"
                    android:background="@drawable/radiobutton_male_selector" />

                <RadioButton
                    android:id="@+id/genderless"
                    style="@style/RadioButtonStyle"
                    android:text="@string/txt_checkbox_genderless"
                    android:textColor="@android:color/transparent"
                    android:background="@drawable/radiobutton_genderless_selector" />

                <RadioButton
                    android:id="@+id/unknown"
                    style="@style/RadioButtonStyle"
                    android:text="@string/txt_checkbox_unknown"
                    android:textColor="@android:color/transparent"
                    android:background="@drawable/radiobutton_unknown_selector" />

            </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply_filter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/title_apply"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/radio_group_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>