<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_fragment"
    android:background="@color/black_light"
    tools:context=".ui.detailfragment.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:background="@drawable/painel">

        <TextView
            android:id="@+id/txt_id_character"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="42"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintVertical_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/txt_status"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alive"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintVertical_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        
        <ImageView
            android:id="@+id/img_character_detail"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="character detail"
            android:background="@color/black_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_status"
            app:layout_constraintBottom_toTopOf="@id/txt_gender"
            app:layout_constraintHorizontal_bias="0.5"  />

        <TextView
            android:id="@+id/txt_name"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="Rick Sanchez"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_character_detail" />

        <TextView
            android:id="@+id/txt_specie"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="Human"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_name" />

        <TextView
            android:id="@+id/txt_gender"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintVertical_bias="0.66"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title_origin"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_origin"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.799"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_origin"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Earth (C -137)"
            android:maxLines="1"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="@id/title_origin"
            app:layout_constraintTop_toBottomOf="@id/title_origin"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/title_location"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_location"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="@id/txt_origin"
            app:layout_constraintTop_toBottomOf="@id/txt_origin"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txt_location"
            style="@style/TextColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_location"
            android:maxLines="1"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="@id/title_location"
            app:layout_constraintTop_toBottomOf="@id/title_location"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/title_episodes"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title_episodes"
            app:layout_constraintVertical_bias="0.23000002"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toEndOf="@id/title_origin"
            app:layout_constraintTop_toBottomOf="@id/txt_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        
        <TextView
            android:id="@+id/txt_n_episodes"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="41"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/title_episodes"
            app:layout_constraintStart_toEndOf="@id/title_episodes"
            app:layout_constraintTop_toTopOf="@id/title_episodes"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>